<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGoogleMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_maps" />

        <Button
            android:id="@+id/btnWaze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waze"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</LinearLayout>
